# osmo-ggsn

./: .gitignore  .gitreview  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.FreeBSD  README.MacOSX  README.Solaris  README.md  TODO-RELEASE  acinclude.m4  aclocal.m4  bootstrap  config.cache  config.h.in  config.status  configure  configure.ac  configure.in  configure.scan  ggsn.conf  libgtp.pc.in  libtool  mkinstalldirs  openggsn.spec.in  osmo-ggsn.spec.in  version
contrib/: jenkins.sh  openggsn.service  osmo-ggsn.service  osmo-ggsn.spec  osmo-ggsn.spec.in
contrib/systemd/: Makefile.am  apn0.netdev  ggsn.network  osmo-ggsn.service
debian/: changelog  control  copyright  gtp-echo-responder.install  libgtp.install  libgtp11.shlibs  libgtp6.shlibs  openggsn.examples  openggsn.init  openggsn.install  osmo-ggsn-doc.install  osmo-ggsn.examples  osmo-ggsn.init  osmo-ggsn.install  osmo-ggsn.service  postinst  rules
doc/: Compliance.html  Makefile  Makefile.am  Makefile.in  ggsn.8  ggsn.8.pl  osmo-ggsn.8  sgsnemu.8  sgsnemu.8.pl
doc/examples/: Makefile.am  firewall  osmo-ggsn-kernel-gtp.cfg  osmo-ggsn.cfg  sgsnemu.conf
doc/manuals/: Makefile  Makefile.am  osmoggsn-usermanual-docinfo.xml  osmoggsn-usermanual.adoc  osmoggsn-vty-reference.xml  regen_doc.sh
doc/manuals/chapters/: configuration.adoc  mtu.adoc  overview.adoc  running.adoc
doc/manuals/vty/: ggsn_vty_additions.xml  ggsn_vty_reference.xml
examples/: firewall  ggsn.conf  ggsn.init  osmo-ggsn.init  sgsnemu.conf
ggsn/: Makefile  Makefile.am  Makefile.in  cmdline.c  cmdline.ggo  cmdline.h  ggsn.c  ggsn.h  ggsn_main.c  ggsn_vty.c  gtp-kernel.c  gtp-kernel.h  icmpv6.c  icmpv6.h  ippool.c  ippool.h  pco.c  pco.h  sgsn.c  sgsn.h  syserr.c  syserr.h  tun.c  tun.h
ggsn/.deps/: ggsn.P  ggsnopt.P
gtp/: Makefile  Makefile.am  Makefile.in  gsn.c  gsn.h  gsn_internal.h  gtp.c  gtp.h  gtp_internal.h  gtp_sgsn_ctx.c  gtp_sgsn_ctx.h  gtpie.c  gtpie.h  lookupa.c  lookupa.h  pdp.c  pdp.h  queue.c  queue.h
gtp/.deps/: gtp.P  gtpie.P  lookupa.P  pdp.P  queue.P
include/: Makefile.am  gsn.h  gtp.h  gtpie.h  pdp.h
include/osmocom/: Makefile.am
include/osmocom/gtp/: Makefile.am  gsn.h  gtp.h  gtpie.h  pdp.h  version.h.tpl
lib/: Makefile.am  checksum.c  checksum.h  debug.c  getopt.c  getopt1.c  gnugetopt.h  gtp-kernel.c  gtp-kernel.h  icmpv6.c  icmpv6.h  in46_addr.c  in46_addr.h  ippool.c  ippool.h  lookup.c  lookup.h  netdev.c  netdev.h  netns.c  netns.h  syserr.c  syserr.h  tun.c  tun.h  tun6.c  util.c  util.h
sgsnemu/: Makefile  Makefile.am  Makefile.in  cmdline.c  cmdline.ggo  cmdline.h  ippool.c  ippool.h  sgsnemu.c  syserr.c  tun.c
sgsnemu/.deps/: cmdline.P  pptpstuff.P  sgsnemu.P  sgsnemuopt.P  tun.P
tests/: Makefile.am  testsuite.at
tests/gtp/: Makefile.am  gtpie_test.c  gtpie_test.ok  queue_test.c  queue_test.ok
tests/lib/: Makefile.am  in46a_test.c  in46a_test.ok  in46a_v6_test.ok  ippool_test.c  ippool_test.err  ippool_test.ok  ippool_v6_test.err  ippool_v6_test.ok
utils/: Makefile.am  gtp_echo_responder.c  gtp_echo_responder_test.py
